<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none"
    card_view:cardCornerRadius="@dimen/margin_large"
    card_view:cardElevation="@dimen/margin_large"
    card_view:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginDefault"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/leadCategoryTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/title_leadgiven"
                android:textAppearance="@style/TextAppearance"
                android:textColor="@color/toolBar"
                android:textSize="@dimen/textSizeDefault"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/edtSpnrPadding">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/preLoginTxt"
                android:textAppearance="@style/TextAppearance"
                android:textColor="@color/black"
                android:textSize="@dimen/textSizeDefault" />

            <TextView
                android:id="@+id/preLogin_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textAppearance="@style/TextAppearance"
                android:textColor="@color/black"
                android:textSize="@dimen/textSizeDefault" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/edtSpnrPadding">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/login"
                android:textAppearance="@style/TextAppearance"
                android:textColor="@color/black"
                android:textSize="@dimen/textSizeDefault" />

            <TextView
                android:id="@+id/login_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textAppearance="@style/TextAppearance"
                android:textColor="@color/black"
                android:textSize="@dimen/textSizeDefault" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/edtSpnrPadding">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/sanctionTxt"
                android:textAppearance="@style/TextAppearance"
                android:textColor="@color/black"
                android:textSize="@dimen/textSizeDefault" />

            <TextView
                android:id="@+id/sanction_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textAppearance="@style/TextAppearance"
                android:textColor="@color/black"
                android:textSize="@dimen/textSizeDefault" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/edtSpnrPadding">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/disbursedTxt"
                android:textAppearance="@style/TextAppearance"
                android:textColor="@color/black"
                android:textSize="@dimen/textSizeDefault" />

            <TextView
                android:id="@+id/disbursed_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textAppearance="@style/TextAppearance"
                android:textColor="@color/black"
                android:textSize="@dimen/textSizeDefault" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/paddingDefault"
            android:paddingLeft="@dimen/edtSpnrPadding"
            android:paddingRight="@dimen/edtSpnrPadding"
            android:paddingTop="@dimen/edtSpnrPadding">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/rejectedTxt"
                android:textAppearance="@style/TextAppearance"
                android:textColor="@color/black"
                android:textSize="@dimen/textSizeDefault" />

            <TextView
                android:id="@+id/rejected_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textAppearance="@style/TextAppearance"
                android:textColor="@color/black"
                android:textSize="@dimen/textSizeDefault" />
        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>